Wed Dec  3 10:45:07 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* lib/Makefile.am (libman_a_CPPFLAGS), libdb/Makefile.am
	  (libmandb_a_CPPFLAGS), src/Makefile.am (AM_CPPFLAGS): Add
	  -I$(top_builddir)/intl.

Wed Dec  3 10:38:33 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib: Import the gettext module. The practical effect of this is
	  to get the intl directory included while compiling files in
	  gnulib/lib.
	* autogen.sh: Prefer gnulib's version of tools/config.rpath over
	  gettext's.

Wed Dec  3 10:17:50 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* m4/man-po4a.m4 (MAN_PO4A): Define a PO4A Automake conditional
	  (again).
	* man/po4a/Makefile.am: Define all-local, update-po, and clean-local
	  rules only if PO4A is set, so that (in particular) distclean works
	  if po4a isn't installed.

Tue Dec  2 16:25:53 GMT 2008  Arif E. Nugroho  <arif_endro@yahoo.com>

	* man/po4a/po/id.po: Update from Translation Project (trivial).

Tue Dec  2 14:50:12 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/id.po: New from Translation Project (thanks, Arif E.
	  Nugroho).
	* configure.ac (AC_CONFIG_FILES): Add man/id/Makefile.
	* man/Makefile.am (DIST_SUBDIRS): Add id.
	* man/id/Makefile.am: New file.
	* man/po4a/Makefile.am (POFILES): Add po/id.po.
	* man/po4a/po4a.cfg (po4a_langs): Add id.
	* man/THANKS: Credit Arif E. Nugroho with man/id as well as id.po.
	* .bzrignore: Add man/id/man1, man/id/man5, and man/id/man8.

Mon Nov 17 19:26:50 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Now that we use the ISO 8601 date format rather than
	  language-specific date variants, there's no reason to call out to
	  date (using options specific to GNU date) to format the date
	  string, so just hardcode it.
	* docs/HACKING (Release process): datemark -> date.

Mon Nov 17 17:55:35 GMT 2008  Colin Watson  <cjwatson@debian.org>

	FreeBSD build fixes.

	* man/Rules.man (replace.sed): Spell out